# brotli-js

./: Cargo.toml  LICENSE  README.md  index.d.ts  index.js  js-binding.d.ts  js-binding.js  package.json
.github/workflows/: CI.yaml
__test__/: index.spec.ts
benchmark/: bench.ts
example/: index.js
npm/: README.md
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
